--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import "tailwindcss";
+
+@theme {
+
+    --color-primary-color: #043873;
+}
+
+*{
+
+    font-family: Montserrat, serif;
+}
 
